# rag-pipeline

./: .codecov.yml  .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  cli.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
eval/: eval_retrieval.py
rag/: chunker.py  config.py  embedder.py  generator.py  pipeline.py  store.py
server/: app.py
tests/: test_chunker.py  test_pipeline.py  test_store.py
