[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "axiom-rag"
version = "1.0.1"
description = "Production RAG pipeline — grounded retrieval, source-cited answers, Precision@k + MRR eval"
authors = [{ name = "Axiom LLC", email = "axiom.co@proton.me" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["rag", "retrieval", "llm", "embeddings", "chromadb", "gemini"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
    "google-genai>=1.0",
    "chromadb>=0.5",
    "flask>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
rag = "cli:main"

[project.urls]
Homepage = "https://axiom-llc.github.io"
Repository = "https://github.com/axiom-llc/axiom-rag"
Changelog = "https://github.com/axiom-llc/axiom-rag/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["rag*", "server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
